# resinkit-byoc

./: .env.common  .env.dev  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  deploy.py  pyproject.toml
.github/workflows/: docker-publish.yml
api/: .env.byoc  .env.common  .gitignore  README.md  pyproject.toml  sqlite.db
api-ui/: README.md  package-lock.json  package.json  tailwind.config.js  tasks_ui.md
api-ui/src/app/: globals.css  layout.tsx
api-ui/src/app/api/: taskService.ts
api-ui/src/app/tasks/: page.tsx
api-ui/src/app/tasks/[taskId]/: page.tsx
api-ui/src/app/tasks/new/: page.tsx
api-ui/src/components/: FilterPanel.tsx  MainLayout.tsx  TaskDetails.tsx  TaskList.tsx  TaskSubmissionForm.tsx
api/examples/: README_variables.md  flink_job_with_variables.yaml
api/examples/flink_cdc/: mysql_to_doris.yaml
api/examples/flink_sql/: sample_001.yaml  sample_001_select_1.yaml  sample_002.yaml  sample_002_select_multi_cols.yaml  sample_003_select_multi_rows.yaml  sample_005_paimon_select_literals.yaml  sample_kafka_doris_01.yaml  simple_004_datagen.yaml  spec.md
api/resinkit_api/: __init__.py  main.py
api/resinkit_api/api/: catalog.py  catalogstore.py  flink.py  health.py  pat.py
api/resinkit_api/api/agent/: README.md  __init__.py  tasks_api.py
api/resinkit_api/api/endpoints/: tasks.py
api/resinkit_api/api/models/: catalog.py  catalogstore.py  models_flink.py
api/resinkit_api/clients/job_manager/: flink_job_manager_client.py
api/resinkit_api/clients/sql_gateway/: flink_operation.py  flink_session.py  flink_sql_gateway_client.py  session_utils.py
api/resinkit_api/core/: config.py  encryption.py  find_root.py  flink_options.py  logging.py
api/resinkit_api/db/: README.md  System_Design.md  __init__.py  alembic.ini  crud.py  database.py  models.py  tasks_crud.py  variables_crud.py
api/resinkit_api/db/alembic/: README  env.py  script.py.mako
api/resinkit_api/db/alembic/versions/: 32c843eb8225_add_task_expiry.py  a53a22092259_create_initial_tables.py  adfa6c905b9d_add_task_expiry.py
api/resinkit_api/services/: __init__.py  svc_catalog.py  svc_catalogstores.py  svc_manager.py
api/resinkit_api/services/agent/: __init__.py  data_models.py  runner_registry.py  task_base.py  task_runner_base.py  task_status_persistence.py  task_types.py  tasks.py
api/resinkit_api/services/agent/common/: flink_models.py  log_file_manager.py  task_base.py
api/resinkit_api/services/agent/flink/: README.md  flink_cdc_pipeline_runner.py  flink_cdc_pipeline_task.py  flink_resource_manager.py  flink_sql_runner.py  flink_sql_task.py  run_flink_cdc_pipeline.py  run_flink_cdc_pipeline_task.py
api/resinkit_api/utils/: file_utils.py  misc_utils.py
api/scripts/: install.sh
api/tests/: test_variables.py
api/tests/e2e/: .env.example  README.md  __init__.py  conftest.py  e2e_base.py  test_catalog.py  test_catalogstore.py  test_pat.py  test_tasks.py
api/tests/services/agent/flink/: test_flink_resource_manager.py
engines/java_app/: README.md  pom.xml
engines/java_app/src/main/java/ai/resink/app/resinkit/: ResinkitApplication.java  SwaggerConfig.java
engines/java_app/src/main/resources/: application.yaml
engines/py_app/: README.md  pyproject.toml
engines/py_app/resinkit/: api_flink.py  main.py  models_flink.py
engines/py_app/resinkit_api/: .env  api_common.py  api_flink.py  config.py  main.py
resinkit-shared/: Dockerfile.testmysql
resinkit-terra/: Dockerfile  README.md  docker-compose-mysql-mionio.yaml  docker-compose-mysql2doris.yaml  docker-compose-starrocks-hms.yaml  docker-compose-starrocks.yaml
resinkit_byoc/: __about__.py  __init__.py
resinkit_byoc/core/: __init__.py  cmd_utils.py  config.py  deploy_utils.py  find_root.py  warnings_filter.py
resinkit_byoc/deploys/: __init__.py  admin_tools.py  common_packages.py  flink.py  flink_download_libs.py  flink_jars.py  gosu.py  install_00_prep.py  install_01_core.py  install_02_flink.py  install_03_core_su.py  install_core.py  install_core_jupyter.sh  install_extras.py  install_prep.py  java.py  jupyter.py  kafka.py  mariadb.py  nginx.py  post_install.py  pre_install.py  python_uv.py  resinkit.py  start_service.py
resinkit_byoc/scripts/: drop_privs_run.sh  install_common_packages.sh  install_core.sh  install_core_resinkit.sh  install_core_su.sh  install_flink.sh  install_mariadb.sh  install_resinkit_api.sh  mount_s3.sh  pre_install.sh
resources/: entrypoint.sh  entrypoint.sh.j2  env.exports.j2  environment.seed  flink_entrypoint.sh  hive_setup.sh  setup.sh  setup_common.sh  setup_debian.sh  setup_debian_additional.sh  setup_uv.sh  setup_vars.sh  vps_setup.sh  vps_setup_dev_env.sh
resources/archived/: entrypoint.sh  environment.seed  setup.sh  setup_common.sh  setup_debian.sh  setup_debian_additional.sh  setup_uv.sh  setup_vars.sh  vps_setup.sh  vps_setup_dev_env.sh
resources/cdc/: docker-compose-mysql2doris.yaml  docker-compose-mysql2kafka.yaml
resources/flink/: flink_entrypoint.sh
resources/flink/cdc/: mysql_2_doris.yaml  mysql_2_kafka.yaml
resources/flink/conf/: conf.yaml  log4j.properties
resources/flink/data/catalog-store/: default_catalog.yaml  paimon_example.yaml
resources/flink/lib/: .gitignore  download.sh
resources/flink/sample_jobs/: flink_sql_1.sql  flink_sql_examples.sql  paimon_01.sql
resources/hive/: test_metastore_direct.py
resources/hive/config/: hive-site.xml
resources/jupyter/: jupyter_entrypoint.sh  jupyter_entrypoint.sh.j2
resources/jupyter/resinkit_sample_project/: pyproject.toml
resources/jupyter/resinkit_sample_project/notebooks/: quick_start.ipynb
resources/jupyter/resinkit_sample_project/src/resinkit_sample_project/: __init__.py
resources/kafka/: kafka.tgz  kafka_entrypoint.sh  server.properties
resources/misc/: sys_inspect.sh
resources/nginx/: default  default_ssl  resinkit_locations.conf  resinkit_nginx.conf
resources/resinkit-api/: .env.byoc  resinkit-api-entrypoint.sh
resources/resinkit-api/_data_/: sqlite.db
resources/test-mysql/: Dockerfile.testmysql  create_tables.sql  entrypoint.sh  generate_data.py  my.cnf
(+15 files in other folders)
