[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "resinkit"
version = "0.1.0"
description = "ResinKit service for managing Flink operations"
authors = ["Shijing Lu <shijing@resink.ai>"]
readme = "README.md"
packages = [{ include = "resinkit" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114"
uvicorn = "^0.23"
pydantic = "^2.9"
pydantic-settings = "^2.5"
python-dotenv = "^1"
httpx = "^0.27"
python-multipart = "^0"

[tool.poetry.dev-dependencies]
pytest = "^8"
black = "^24"
isort = "^5"
flake8 = "^3"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
